NXP-30203: adapt alias tests to 10.10 backport